Added 7 lessons & 2 projects

--- a/01/lesson-01/index.html
+++ b/01/lesson-01/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,13 @@
   <script src="1a.js" defer></script>
   <script src="../lesson-02/2a.js"></script>
   <script src="../lesson-03/3a.js"></script>
+  <script src="../lesson-06/6a.js"></script>
+  <script src="../lesson-06/6b.js"></script>
+  <script src="../lesson-07/7a.js"></script>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
