Added lesson 8 - made changes in projects

--- a/01/lesson-01/index.html
+++ b/01/lesson-01/index.html
@@ -12,6 +12,7 @@
   <script src="../lesson-06/6a.js"></script>
   <script src="../lesson-06/6b.js"></script>
   <script src="../lesson-07/7a.js"></script>
+  <script src="../lesson-08/8a.js"></script>
 </head>
 
 <body>
