--- a/01/projects/calculator/index.html
+++ b/01/projects/calculator/index.html
@@ -10,31 +10,31 @@
 
 <body>
   <div>
-    <button onclick="btn1()">1</button>
-    <button onclick="btn2()">2</button>
-    <button onclick="btn3()">3</button>
-    <button onclick="add()">+</button>
+    <button onclick="operator('1')">1</button>
+    <button onclick="operator('2')">2</button>
+    <button onclick="operator('3')">3</button>
+    <button onclick="operator(' + ')">+</button>
   </div>
   &nbsp;
   <div>
-    <button onclick="btn4()">4</button>
-    <button onclick="btn5()">5</button>
-    <button onclick="btn6()">6</button>
-    <button onclick="subtract()">-</button>
+    <button onclick="operator('4')">4</button>
+    <button onclick="operator('5')">5</button>
+    <button onclick="operator('6')">6</button>
+    <button onclick="operator(' - ')">-</button>
   </div>
   &nbsp;
   <div>
-    <button onclick="btn7()">7</button>
-    <button onclick="btn8()">8</button>
-    <button onclick="btn9()">9</button>
-    <button onclick="multilply()">*</button>
+    <button onclick="operator('7')">7</button>
+    <button onclick="operator('8')">8</button>
+    <button onclick="operator('9')">9</button>
+    <button onclick="operator(' * ')">*</button>
   </div>
   &nbsp;
   <div>
-    <button onclick="btn7()">0</button>
-    <button onclick="btn8()">.</button>
+    <button onclick="operator('0')">0</button>
+    <button onclick="operator('.')">.</button>
     <button onclick="equals()">=</button>
-    <button onclick="divide()">/</button>
+    <button onclick="operator(' / ')">/</button>
   </div>
   &nbsp;
   <div>
