--- a/01/projects/calculator/index.html
+++ b/01/projects/calculator/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator++</title>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
+
+  <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
+  <p class="calc-display"></p>
   <div>
     <button onclick="operator('1')">1</button>
     <button onclick="operator('2')">2</button>
@@ -38,7 +42,10 @@
   </div>
   &nbsp;
   <div>
-    <button onclick="clear()">clear</button>
+    <!-- <button onclick="calculation=''
+    console.log(calculation)
+    " id="cbtn">clear</button> -->
+    <button onclick="clearbtn()">clear</button>
   </div>
 
 
