--- a/01/projects/coin-flip-game/index.html
+++ b/01/projects/coin-flip-game/index.html
@@ -11,6 +11,9 @@
 
 <body>
 
+  <button onclick="choose('heads')">heads</button>
+  <button onclick="choose('tails')">tails</button>
+
 </body>
 
 </html>
