--- a/01/lesson-01/index.html
+++ b/01/lesson-01/index.html
@@ -6,16 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Javasript Practise - Lesson01</title>
 
-  <script src="1a.js" defer></script>
+  <!-- <script src="1a.js" defer></script>
   <script src="../lesson-02/2a.js"></script>
   <script src="../lesson-03/3a.js"></script>
   <script src="../lesson-06/6a.js"></script>
   <script src="../lesson-06/6b.js"></script>
   <script src="../lesson-07/7a.js"></script>
-  <script src="../lesson-08/8a.js"></script>
+  <script src="../lesson-08/8a.js"></script> -->
+  <!-- <script src="../lesson-09/9a.js" defer></script> -->
+  <!-- <script src="../lesson-10/10.js" defer></script> -->
 </head>
 
 <body>
+  <!-- <button class="toggle-button btn1" onclick="toggleBtn('.btn1')">Workout</button>
+  <button class="toggle-button btn2" onclick="toggleBtn('.btn2')">Learning</button>
+  <button class="toggle-button btn3" onclick="toggleBtn('.btn3')">Cycling</button> -->
+
 
 </body>
 
